small update to see how it can go

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>KVIrc by un1versal</title>
+    <title>By: the KVIrc development team</title>
   </head>
 
   <body>
@@ -16,11 +16,11 @@
     <header>
       <div class="container">
         <h1>KVIrc</h1>
-        <h2>Dont make me think!</h2>
+        <h2>Don't make me think!</h2>
 
         <section id="downloads">
-          <a href="https://github.com/un1versal/KVIrc/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/un1versal/KVIrc/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/kvirc/KVIrc/wiki/Downloading-KVIrc's-nightly-source-or-binaries" class="btn">Download KVIrc</a>
+          <a href="https://github.com/un1versal/KVIrc/tarball/master" class="btn">Grab Source .tar.gz</a>
           <a href="https://github.com/un1versal/KVIrc" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -37,10 +37,10 @@
 <h4>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h4>
 
-<p>KVIrc is a free portable IRC client based on the excellent Qt GUI toolkit.
-KVirc is being written by Szymon Stefanek and the KVIrc development team with the contribution of many IRC addicted developers around the world.</p>
+<p>KVIrc is a free portable IRC client, leveraging the Qt GUI toolkit.
+KVirc is written by Szymon Stefanek and the KVIrc development team, with the contribution of many IRC addicted developers around the world.</p>
 
-<p>This is the Github development and bug tracker home for the KVIrc project.</p>
+<p>This is the GitHub development and bug tracker home for the KVIrc project.</p>
 
 <h4>
 <a id="getting-involved" class="anchor" href="#getting-involved" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting involved</h4>
@@ -66,9 +66,9 @@ KVirc is being written by Szymon Stefanek and the KVIrc development team with th
 
 <p>Try one of our fresh off-the-press nightly development 32-bit or 64-bit builds for Windows, Ubuntu and Debian.</p>
 
-<h4>
+<h3>
 <a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/kvirc/KVIrc/wiki/Downloading-KVIrc's-nightly-source-or-binaries">Downloads</a>
-</h4>
+</h3>
 
 <p>We're also looking for volunteer packagers and maintainers to other distributions that can help us extend KVIrc's availability to other OS's.</p>
 
@@ -80,7 +80,8 @@ KVirc is being written by Szymon Stefanek and the KVIrc development team with th
 <ul>
 <li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL.txt">Linux install</a></li>
 <li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-MacOS.txt">OS X install</a></li>
-<li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win32.txt">Windows install</a></li>
+<li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win32.txt">Windows 32-bit install</a></li>
+<li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win64.txt">Windows 64-bit install</a></li>
 </ul>
 
 <h4>
