--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <section id="downloads">
           <a href="https://github.com/kvirc/KVIrc/wiki/Downloading-KVIrc's-nightly-source-or-binaries" class="btn">Download KVIrc</a>
-          <a href="https://github.com/un1versal/KVIrc/tarball/master" class="btn">Grab Source .tar.gz</a>
-          <a href="https://github.com/un1versal/KVIrc" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/kvirc/KVIrc/tarball/master" class="btn">Grab Source .tar.gz</a>
+          <a href="https://github.com/kvirc/KVIrc" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
