--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section id="downloads">
           <a href="https://github.com/kvirc/KVIrc/wiki/Downloading-KVIrc's-nightly-source-or-binaries" class="btn">Download KVIrc</a>
-          <a href="https://github.com/kvirc/KVIrc/tarball/master" class="btn">Grab Source .tar.gz</a>
+          <a href="https://github.com/kvirc/KVIrc/tarball/master" class="btn">Grab Source as .tar.gz</a>
           <a href="https://github.com/kvirc/KVIrc" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -34,7 +34,7 @@
 
 <p><img src="https://raw.githubusercontent.com/kvirc/KVIrc/master/data/icons/128x128/kvirc.png" alt="KVIrc logo" title="KVIrc - The visual IRC client for the masses!"></p>
 
-<h4>
+<h2>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h4>
 
 <p>KVIrc is a free portable IRC client, leveraging the Qt GUI toolkit.
@@ -42,14 +42,14 @@ KVirc is written by Szymon Stefanek and the KVIrc development team, with the con
 
 <p>This is the GitHub development and bug tracker home for the KVIrc project.</p>
 
-<h4>
+<h2>
 <a id="getting-involved" class="anchor" href="#getting-involved" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting involved</h4>
 
 <ul>
 <li><a href="https://github.com/kvirc/KVIrc/wiki/Getting-involved-and-contributing">Contributing</a></li>
 </ul>
 
-<h4>
+<h2>
 <a id="help--support" class="anchor" href="#help--support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Help &amp; Support</h4>
 
 <ul>
@@ -66,13 +66,13 @@ KVirc is written by Szymon Stefanek and the KVIrc development team, with the con
 
 <p>Try one of our fresh off-the-press nightly development 32-bit or 64-bit builds for Windows, Ubuntu and Debian.</p>
 
-<h3>
+<h2>
 <a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/kvirc/KVIrc/wiki/Downloading-KVIrc's-nightly-source-or-binaries">Downloads</a>
-</h3>
+</h2>
 
 <p>We're also looking for volunteer packagers and maintainers to other distributions that can help us extend KVIrc's availability to other OS's.</p>
 
-<h4>
+<h2>
 <a id="install-and-compile" class="anchor" href="#install-and-compile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install and compile</h4>
 
 <p>Compiling KVIrc on your Linux platform is now easier than ever, and the best way to enjoy the best KVIrc versions yet.</p>
@@ -84,7 +84,7 @@ KVirc is written by Szymon Stefanek and the KVIrc development team, with the con
 <li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win64.txt">Windows 64-bit install</a></li>
 </ul>
 
-<h4>
+<h2>
 <a id="licensing" class="anchor" href="#licensing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Licensing</h4>
 
 <ul>
