win install: 2 links in one line

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@ KVirc is written by Szymon Stefanek and the KVIrc development team, with the con
 <ul>
 <li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL.txt">Linux install</a></li>
 <li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-MacOS.txt">OS X install</a></li>
-<li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win32.txt">Windows 32-bit install</a></li>
-<li><a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win64.txt">Windows 64-bit install</a></li>
+<li>Windows <a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win32.txt">32-bit install</a> or <a href="https://github.com/kvirc/KVIrc/blob/master/doc/INSTALL-Win64.txt">64-bit Install</a></li>
 </ul>
 
 <h2>
